{{$NEXT}}

Interface:
* FeatureStructure has new methods is_masculine(), is_feminine(), is_neuter(), is_common_gender(),
  is_negative(), is_affirmative(), is_auxiliary(), is_modal(), is_gerund(), is_conditional(),
  is_cardinal(), is_ordinal().



2.020     2014-10-31 17:34:17+01:00 Europe/Prague

Features:
* Two new values of the feature 'foreign':
  * 'fscript' = foreign word in foreign script
  * 'tscript' = foreign word transcribed from a foreign script

Drivers:
* EL::Conll



2.019     2014-10-30 22:30:13+01:00 Europe/Prague

Interface:
* FeatureStructure::set($feature, $value) now dies if either the feature or the value is unknown.
* Default setters (e.g. set_gender()) now call set($feature, $value), so they can take multivalues
  in all forms and referenced arrays (if any) are deeply copied, not shared.
* Default getters (e.g. gender()) now always return scalars. Multivalues are joined by vertical bars.
  This is the same behavior as with the get_joined($feature) method.
* Exception: The 'other' feature can still contain anything (usually a hash reference)
  and its getter ($fs->other()) will return exactly that anything, not necessarily a scalar.



2.018     2014-10-17 14:51:14+02:00 Europe/Prague

Drivers:
* PT::Cintil

Interface:
* FeatureStructure has new methods is_comparative() and is_superlative().



2.017     2014-10-13 16:07:59+02:00 Europe/Prague

Features:
* Value 'art' (article) moved from feature 'adjtype' to 'prontype'. Adjtype becomes deprecated.
* Value 'det' (determiner) of 'adjtype' removed. Determiners are now recognized by pos=adj + non-empty value of 'prontype'.

Interface:
* FeatureStructure has new method is_article().



2.016     2014-10-11 21:46:09+02:00 Europe/Prague

Features:
* Feature 'number', value 'plu' (plural) changed to 'plur' to reflect the Universal Dependencies / Features.



2.015     2014-10-10 18:23:36+02:00 Europe/Prague

Drivers:
* DE::Stts
* DE::Conll
* DE::Conll2009
* MUL::Uposf

Fixes: