@@ -1727,6 +1727,9 @@ sub is_particle {my $self = shift; return $self->contains('pos', 'part');}
 =method is_past()
 =cut
 sub is_past {my $self = shift; return $self->contains('tense', 'past');}
+=method is_personal_pronoun()
+=cut
+sub is_personal_pronoun {my $self = shift; return $self->contains('prontype', 'prs');}
 =method is_possessive()
 =cut
 sub is_possessive {my $self = shift; return $self->poss() eq 'poss';}
